# Insee_prospector_cloud

./: .env.example  .gitignore  GEMINI.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py  style.css  test_grenoble.py
.streamlit/: config.toml
data/: naf_2025.csv
helpers/: datagouv_api_client.py  user_agent.py
tools/: enricher_tools.py  naf_search.py  sirene_engine.py
